--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -119,37 +119,13 @@
 
 		/*-------------------navbar end-------------------*/
 
-		/* content */
-
-		#wrapper{
-			margin-top: 250px;
-			margin-bottom: 20px;
-			margin-left: 20px;
-			margin-right: 20px;
-		}
-
-		#description-counter{
-			width: 60%;
-			float: left;
-		}
-
-		#sign-up{
-			width: 34%;
-			float: right;
-		}
-
-		/* footer */
-
-		footer {
-			clear: both;
-		}
 
 	</style>
 
 
   </head>
 	<body>
-<header>
+	<header>
 	<nav class="navbar navbar-inverse" role="navigation">
 		<div class="container-fluid" id="navbar-inner">
 		<!-- Brand and toggle get grouped for better mobile display -->
@@ -160,33 +136,52 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" >
-					<!--TODO url einfuegen -->
-					<img src="{% static 'basics/images/AoGLogo.png' %}" alt="Act of Goods"/>
+				<a class="navbar-brand" >																																	<!--TODO url einfuegen -->
+					<img id="brand-image" src={% static 'basics/images/AoGLogo.png'%} alt="Act of Goods"/>
 				</a>
 			</div>
+
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="navbar-collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li><p class="navbar-text">Already have an account?</p></li>
+					<li class="dropdown">
+						<a id="navbar-login" href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+						<ul id="login-dp" class="dropdown-menu">
+							<li>
+								<div class="row">
+									<div class="col-md-12">
+										<form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+											<div class="form-group">
+												<label class="sr-only" for="InputEmail">Email address</label>
+												<input type="email" class="form-control" id="InputEmail" placeholder="Email address" required>
+											</div>
+											<div class="form-group">
+												<label class="sr-only" for="InputPassword">Password</label>
+												<input type="password" class="form-control" id="InputPassword" placeholder="Password" required>
+												<div class="help-block text-right"><a href="">Forget the password?</a></div>						<!--TODO url einfuegen -->
+											</div>
+											<div class="form-group">
+												<button type="submit" class="btn btn-primary btn-block">Sign in</button>
+											</div>
+											<div class="checkbox">
+												<label>
+													<input type="checkbox"> keep me logged-in
+												</label>
+											</div>
+										</form>
+									</div>
+								</div>
+							</li>
+						</ul>
+					</li>
+				</ul>
+			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
 </header>
 
-<div class="container-fluid" id="wrapper">
-	{% block content %}
-	{% endblock %}
-<footer>
-	<div class="container text-center">
 
-    <div class="row">
-        <div class="col-lg-12">
-            <ul class="nav nav-pills nav-justified">
-                <li><a href="#">© 2013 Company Name.</a></li>
-                <li><a href="#">Impressum</a></li>
-                <li><a href="#">Privacy</a></li>
-            </ul>
-        </div>
-    </div>
-  </div>
-</footer>
-</div>
      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
