--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -185,6 +185,6 @@
      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="{% static 'basics/js/bootstrap.min.js' %}"></script>
   </body>
 </html>
