--- a/basics/templates/aboutus.html
+++ b/basics/templates/aboutus.html
@@ -1,4 +1,4 @@
-{% extends "basics\base.html" %}
+{% extends "actofgoods_startpage.html" %}
 {% block content %}
        <!-- Introduction Row -->
         <div class="row">
