--- a/basics/templates/basics/aboutus.html
+++ b/basics/templates/basics/aboutus.html
@@ -1,5 +1,6 @@
-{% extends "basics\actofgoods_startpage.html" %}
+{% extends 'basics/base.html' %}
 {% block content %}
+    <body>
        <!-- Introduction Row -->
         <div class="row">
             <div class="col-lg-12">
@@ -72,4 +73,5 @@
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
         </div>
+    </body>
 {% endblock %}
