--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -180,7 +180,8 @@
 		</div><!-- /.container-fluid -->
 	</nav>
 </header>
-
+	{% block content %}
+    {% endblock %}
 
      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
