--- a/basics/templates/basics/aboutus.html
+++ b/basics/templates/basics/aboutus.html
@@ -2,6 +2,7 @@
 {% block content %}
     <body>
        <!-- Introduction Row -->
+        <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">About Us
@@ -25,14 +26,14 @@
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>JPaul Neck
+                <h3>Paul Neck
                     <small>Scrum Master</small>
                 </h3>
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>Phililip Fiala
+                <h3>Phillip Fiala
                     <small>Scrum Master</small>
                 </h3>
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
