--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -143,6 +143,10 @@
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="navbar-collapse">
+				<ul class="nav navbar-nav navbar-left">
+					<li><a href="#">Home</a></li>
+                    <li><a href="#">Impressum</a></li>
+				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><p class="navbar-text">Already have an account?</p></li>
 					<li class="dropdown">
