--- a/basics/templates/basics/aboutus.html
+++ b/basics/templates/basics/aboutus.html
@@ -1,6 +1,5 @@
 {% extends 'basics/base.html' %}
 {% block content %}
-    <body>
        <!-- Introduction Row -->
         <div class="container">
         <div class="row">
@@ -74,5 +73,5 @@
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
         </div>
-    </body>
+    </div>
 {% endblock %}
