--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -120,13 +119,34 @@
 		/*-------------------navbar end-------------------*/
 
 		/* ---------------------- footer start ---------------------- */
-		
+
+		* {
+    		margin: 0;
+    		padding: 0;
+		}
+
+		html, body {
+    		height: 100%;
+		}
+
+		#wrapper{
+			position: relative;
+    		min-height: 100%;
+    		width: 100%;
+    		margin: 0 auto;
+		}
+
 		#footer {
 			background-color: rgba(76,78,73,.9);
 			height: 150px;
 			margin-top: 20px;
 			width:100%;
+			bottom: 0;
+			position: absolute;
+			
 		}
+
+
 				
 		.nav-pills > li > a {
 			margin-top: 55px;
@@ -157,7 +177,8 @@
 
   </head>
 	<body>
-	<header>
+<div id="wrapper">
+	<div id="header">
 	<nav class="navbar navbar-inverse" role="navigation">
 		<div class="container-fluid" id="navbar-inner">
 		<!-- Brand and toggle get grouped for better mobile display -->
@@ -215,7 +236,7 @@
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
-</header>
+</div>
 	{% block content %}
     {% endblock %}
 
@@ -230,7 +251,7 @@
 			</div>
 		</div>
 	</div>
-
+</div>
      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
