--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -28,6 +28,7 @@
     			min-height: 100%;
     			width: 100%;
     			margin: 0 auto;
+    			overflow-x: hidden;
 		}
 
 		/*-------------------navbar start-------------------*/
@@ -248,7 +249,7 @@
 </div>
 	<div id="footer">
 		<div class="row" id="footer-row">
-        		<div class="col-lg-12 col-md-12 col-sm-12">
+        	<div class="col-lg-12 col-md-12 col-sm-12">
 				<ul class="nav nav-pills nav-justified">
 					<li><a href="#">Act of Goods</a></li>						<!-- insert url-->
 					<li><a href="#">Privacy</a></li>						<!-- insert url-->
