--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -182,22 +182,23 @@
 							<li>
 								<div class="row">
 									<div class="col-md-12">
-										<form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
-											<div class="form-group">
+                    <form class="form" role="form" method="post" action="{% url 'basics:login' %}" accept-charset="UTF-8" id="login-nav">
+                      {% csrf_token %}
+                      <div class="form-group">
 												<label class="sr-only" for="InputEmail">Email address</label>
-												<input type="email" class="form-control" id="InputEmail" placeholder="Email address" required>
+												<input type="email" class="form-control" name="email" placeholder="Email address" required>
 											</div>
 											<div class="form-group">
 												<label class="sr-only" for="InputPassword">Password</label>
-												<input type="password" class="form-control" id="InputPassword" placeholder="Password" required>
+												<input type="password" class="form-control" name="password" placeholder="Password" required>
 												<div class="help-block text-right"><a href="">Forget the password?</a></div>						<!--TODO url einfuegen -->
 											</div>
 											<div class="form-group">
 												<button type="submit" class="btn btn-primary btn-block">Sign in</button>
 											</div>
-											<div class="checkbox">
+											<div class="checkbox" >
 												<label>
-													<input type="checkbox"> keep me logged-in
+													<input type="checkbox" data-toggle="switch" value="True" name="toggle_button"> keep me logged-in
 												</label>
 											</div>
 										</form>
