added register field

--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -113,6 +113,21 @@
 		#content {
 			padding-bottom: 150px;
 		}
+
+		#description-counter{
+			width: 60%;
+			float: right;
+      margin: 30px auto;
+      margin-top: 30px;
+      margin-right: auto;
+      margin-bottom: 30px;
+      margin-left: auto;
+		}
+
+		#sign-up{
+			width: 34%;
+			float: left;
+		}
 		/* ---------------------- footer start ---------------------- */
 		#footer {
 			background-color: rgba(76,78,73,.9);
