--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -1,4 +1,36 @@
+
 {% extends 'basics/base.html' %}
 
 {% block content %}
+<div class="container-fluid" id="wrapper">
+
+    <div class="modal-dialog" id="sign-up">
+  		<div class="modal-content">
+  			<div class="modal-header">
+  				<h1 class="text-center">Welcome</h1>
+  			</div>
+  			<div class="modal-body">
+  				<div class="form-group">
+  					<input type="text" class="form-control input-lg" placeholder="Email"/>
+  				</div>
+
+  				<div class="form-group">
+  					<input type="password" class="form-control input-lg" placeholder="Password"/>
+  				</div>
+          <div class="form-group">
+  					<input type="password" class="form-control input-lg" placeholder="Password"/>
+  				</div>
+          <div class="form-group">
+  					<input type="password" class="form-control input-lg" placeholder="Country"/>
+  				</div>
+  				<div class="form-group">
+  					<input type="submit" class="btn btn-block btn-lg btn-primary" value="Register"/>
+  				</div>
+  			</div>
+  		</div>
+    </div>
+    <div id="description-counter">
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    </div>
+</div>
 {% endblock %}
