--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -218,7 +218,7 @@
         			<div class="col-lg-12 col-md-12 col-sm-12">
 					<ul class="nav nav-pills nav-justified">
 						<li><a href="{% url 'basics:login' %}">Act of Goods</a></li>
-						<li><a href="#">Privacy</a></li>
+						<li><a href="{% url 'basics:privacy' %}">Privacy</a></li>
 						<li><a href="{% url 'basics:aboutus' %}">About Us</a></li>
 					</ul>
 				</div>
