--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -10,22 +10,31 @@
   				<h1 class="text-center">Welcome</h1>
   			</div>
   			<div class="modal-body">
-  				<div class="form-group">
-  					<input type="text" class="form-control input-lg" placeholder="Email"/>
+          <form class="form" role="form" method="post" action="{% url 'basics:register' %}" accept-charset="UTF-8">
+              {% csrf_token %}
+          <div class="form-group" action="{% url 'basics:register' %}">
+
+  					<input type="text" class="form-control input-lg" name="email" placeholder="Email"/>
   				</div>
 
   				<div class="form-group">
-  					<input type="password" class="form-control input-lg" placeholder="Password"/>
+  					<input type="password" class="form-control input-lg" name="password" placeholder="Password"/>
   				</div>
           <div class="form-group">
   					<input type="password" class="form-control input-lg" placeholder="Password"/>
   				</div>
           <div class="form-group">
-  					<input type="password" class="form-control input-lg" placeholder="Country"/>
+  					<input type="text" class="form-control input-lg" name="country" placeholder="Country"/>
   				</div>
+          <div class="checkbox" >
+            <label>
+              <input type="checkbox" data-toggle="switch" value="True" name="toggle_button"> keep me logged-in
+            </label>
+          </div>
   				<div class="form-group">
   					<input type="submit" class="btn btn-block btn-lg btn-primary" value="Register"/>
   				</div>
+        </form>
   			</div>
   		</div>
     </div>
