--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -133,12 +133,18 @@
 			width:100%;
 			bottom: 0;
 			position: absolute;
+			border-top-width: 1px;
+			border-top-style: solid;
+			border-top-color: rgba(0, 0, 0, 0.15);
+			box-shadow: 0 -8px 12px rgba(0,0,0,.175);
 
 		}
 
 		.nav-pills > li > a {
 			margin-top: 55px;
 			margin-bottom: 55px;
+			margin-left: 15px;
+			margin-right: 15px;
 			color: #70962c;
 		}
 
