--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -10,22 +10,25 @@
   				<h1 class="text-center">Welcome</h1>
   			</div>
   			<div class="modal-body">
-  				<div class="form-group">
-  					<input type="text" class="form-control input-lg" placeholder="Email"/>
-  				</div>
+  				<form class="form" role="form" method="post" action="{% url 'basics:login' %}" accept-charset="UTF-8" id="login-nav">
+	                {% csrf_token %}
+	  				<div class="form-group">
+	  					<input type="text" class="form-control input-lg" placeholder="Email"/>
+	  				</div>
 
-  				<div class="form-group">
-  					<input type="password" class="form-control input-lg" placeholder="Password"/>
-  				</div>
-          <div class="form-group">
-  					<input type="password" class="form-control input-lg" placeholder="Password"/>
-  				</div>
-          <div class="form-group">
-  					<input type="password" class="form-control input-lg" placeholder="Country"/>
-  				</div>
-  				<div class="form-group">
-  					<input type="submit" class="btn btn-block btn-lg btn-primary" value="Register"/>
-  				</div>
+	  				<div class="form-group">
+	  					<input type="password" class="form-control input-lg" placeholder="Password"/>
+	  				</div>
+	          		<div class="form-group">
+	  					<input type="password" class="form-control input-lg" placeholder="Password"/>
+	  				</div>
+	          		<div class="form-group">
+	  					<input type="password" class="form-control input-lg" placeholder="Country"/>
+	  				</div>
+	  				<div class="form-group">
+	  					<input type="submit" class="btn btn-block btn-lg btn-primary" value="Register"/>
+	  				</div>
+  				</form>
   			</div>
   		</div>
     </div>
