--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -188,9 +188,14 @@
 						</a>
 					</div>
 
+
+
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">
+							{% if user.is_authenticated%}
+							<li> <a href="{% url 'basics:logout' %}" class="btn btn-primary btn-block"> Logout </a> </li>
+							{% else %}
 							<li><p class="navbar-text">Already have an account?</p></li>
 							<li class="dropdown">
 								<a id="navbar-login" href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
@@ -202,7 +207,7 @@
                       								{% csrf_token %}
                       								<div class="form-group">
 														<label class="sr-only" for="InputEmail">Email address</label>
-														<input type="email" class="form-control" name="email" placeholder="Email address" required>
+														<input type="text" class="form-control" name="email" placeholder="Email address" required>
 													</div>
 													<div class="form-group">
 														<label class="sr-only" for="InputPassword">Password</label>
@@ -223,6 +228,7 @@
 									</li>
 								</ul>
 							</li>
+							{% endif %}
 						</ul>
 					</div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
