--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -10,20 +10,20 @@
   				<h1 class="text-center">Welcome</h1>
   			</div>
   			<div class="modal-body">
-  				<form class="form" role="form" method="post" action="{% url 'basics:login' %}" accept-charset="UTF-8" id="login-nav">
+  				<form class="form" role="form" method="post" action="{% url 'basics:register' %}" accept-charset="UTF-8" id="login-nav">
 	                {% csrf_token %}
 	  				<div class="form-group">
-	  					<input type="text" class="form-control input-lg" placeholder="Email"/>
+	  					<input type="email" class="form-control input-lg" placeholder="Email" name="email"/>
 	  				</div>
 
 	  				<div class="form-group">
-	  					<input type="password" class="form-control input-lg" placeholder="Password"/>
+	  					<input type="password" class="form-control input-lg" placeholder="Password" name="password"/>
 	  				</div>
 	          		<div class="form-group">
-	  					<input type="password" class="form-control input-lg" placeholder="Password"/>
+	  					<input type="password" class="form-control input-lg" placeholder="Password" name="check_password"/>
 	  				</div>
 	          		<div class="form-group">
-	  					<input type="password" class="form-control input-lg" placeholder="Country"/>
+	  					<input type="password" class="form-control input-lg" placeholder="Country" name="country"/>
 	  				</div>
 	  				<div class="form-group">
 	  					<input type="submit" class="btn btn-block btn-lg btn-primary" value="Register"/>
