--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -122,7 +122,7 @@
 				padding: 15;
 			}
 
-			#navbar-aboutus { 
+			#navbar-with-divider { 
 				border-bottom-width: 1px;
 				border-bottom-style: solid;
 			}
@@ -197,6 +197,8 @@
 	<body>
 
 	<div id="wrapper">
+		{% if user.is_authenticated %} <!-- signed in user -->
+		<!-- TODO if user is normal user, ngo, country or admin -->
 		<div id="header">
 			<nav class="navbar navbar-inverse" role="navigation">
 				<div class="container-fluid" id="navbar-inner">
@@ -208,7 +210,40 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="{% url 'basics:login' %}">																															
+						<a class="navbar-brand" href="{% url 'basics:login' %}">			<!-- TODO change url to index -->
+							<img id="brand-image" src={% static 'basics/images/AoGLogo.png'%} alt="Act of Goods"/>
+						</a>
+					</div>
+
+					<!-- Collect the nav links, forms, and other content for toggling -->
+					<div class="collapse navbar-collapse" id="navbar-collapse">
+						<ul class="nav navbar-nav navbar-left">
+							<li {% if "/chat/" not in request.path and "/profil/" not in request.path and "/aboutus/" not in request.path and "/privacy/" not in request.path %} class="active" {% endif %}><a href="{% url 'basics:login' %}">Home</a></li>			<!-- TODO change url to index and update if-->
+							<li><a href="#">Needs</a></li>					<!-- insert URL for needs and create if for class = active-->
+							<li><a href="#">Information</a></li>				<!-- insert URL for information and create if for class = active-->
+							<li id="navbar-with-divider" {% if "/profil/" not in request.path and "/aboutus/" not in request.path and "/privacy/" not in request.path %} class="active" {% endif %}><a href="{% url 'basics:chat' %}">Messages</a></li>				<!-- update if-->
+						</ul>
+						<ul class="nav navbar-nav navbar-right">
+							<li {% if "/chat/" not in request.path and "/aboutus/" not in request.path and "/privacy/" not in request.path %} class="active" {% endif %}><a href="{% url 'basics:profil' %}">Profil</a></li>
+							<li><a href="{% url 'basics:logout' %}">Logout</a></li>
+						</ul>
+					</div><!-- /.navbar-collapse -->
+				</div><!-- /.container-fluid -->
+			</nav>
+		</div>
+		{% else %} <!-- navbar for unsigned user -->
+		<div id="header">
+			<nav class="navbar navbar-inverse" role="navigation">
+				<div class="container-fluid" id="navbar-inner">
+					<!-- Brand and toggle get grouped for better mobile display -->
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="{% url 'basics:login' %}">	
 							<img id="brand-image" src={% static 'basics/images/AoGLogo.png'%} alt="Act of Goods"/>
 						</a>
 					</div>
@@ -218,13 +253,10 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="navbar-collapse">
 						<ul class="nav navbar-nav navbar-left">
-							<li {% if "/aboutus/" not in request.path and "/privacy/" not in request.path %} class="active" {% endif %}><a href="{% url 'basics:login'%}">Home</a></li>
-							<li id="navbar-aboutus" {% if "/aboutus/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:aboutus'%}">About Us</a></li>						
+							<li {% if "/aboutus/" not in request.path and "/privacy/" not in request.path %} class="active" {% endif %}><a href="{% url 'basics:login' %}">Home</a></li>
+							<li id="navbar-with-divider" {% if "/aboutus/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:aboutus'%}">About Us</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
-							{% if user.is_authenticated%}
-							<li> <a href="{% url 'basics:logout' %}" class="btn btn-primary btn-block"> Logout </a> </li>
-							{% else %}
 							<li><p class="navbar-text">Already have an account?</p></li>
 							<li class="dropdown">
 								<a id="navbar-login" href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
@@ -241,7 +273,7 @@
 													<div class="form-group">
 														<label class="sr-only" for="InputPassword">Password</label>
 														<input type="password" class="form-control" name="password" placeholder="Password" required>
-														<div class="help-block text-right"><a href="">Forget the password?</a></div>						<!--TODO url einfuegen -->
+														<div class="help-block text-right"><a href="">Forget the password?</a></div>
 													</div>
 													<div class="form-group">
 														<button type="submit" class="btn btn-primary btn-block">Sign in</button>
@@ -257,12 +289,12 @@
 									</li>
 								</ul>
 							</li>
-							{% endif %}
 						</ul>
 					</div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
 			</nav>
 		</div>
+		{% endif %}
 
 		<div class="container" id="content">
 		{% block content %}
@@ -273,7 +305,7 @@
 			<div class="row" id="footer-row">
         			<div class="col-lg-12 col-md-12 col-sm-12">
 					<ul class="nav nav-pills nav-justified">
-						<li><a href="{% url 'basics:login' %}">Act of Goods</a></li>
+						<li><a {% if user.is_authenticated %} href="{% url 'basics:login' %}" {% else %} href="{% url 'basics:login' %}" {% endif %}>Act of Goods</a></li>					<!-- change url if user is authenticated to index -->
 						<li><a href="{% url 'basics:privacy' %}">Privacy</a></li>
 						<li><a href="{% url 'basics:aboutus' %}">About Us</a></li>
 					</ul>
