fixed vertikal scrolling

--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -24,6 +24,7 @@
     			width: 100%;
     			margin: 0 auto;
     			overflow-x: hidden;
+    			overflow-y: hidden;
 		}
 		/*-------------------navbar start-------------------*/
 		.navbar{
