added home template, content crosses footer -> needs to be fixed, restructured some css code: event-list.css and navbar.css as extra sheets

--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -9,7 +9,8 @@
 
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="{% static 'basics/css/bootstrap.min.css' %}">
-	
+    <link rel="stylesheet" href="{% static 'basics/css/event-list.css' %}">
+    <link rel="stylesheet" href="{% static 'basics/css/navbar.css' %}">
 	<style>
 		* {
 	    		margin: 0;
@@ -26,113 +27,7 @@
     			overflow-x: hidden;
     			overflow-y: hidden;
 		}
-		/*-------------------navbar start-------------------*/
-		.navbar{
-			background-color: rgba(76,78,73,.9);
-			border: 0px;
-			border-bottom-width: 1px;
-			border-bottom-style: solid;
-			border-bottom-color: rgba(0, 0, 0, 0.15);
-			box-shadow: 0 8px 12px rgba(0,0,0,.175);
-			border-radius: 0px;
-		}
-		.navbar-toggle{
-			margin-top: 58px;
-			margin-bottom: 58px;
-		}
 
-		.navbar-brand{
-			height:	150px;
-		}
-
-		#brand-image{
-			height: 120px;
-		}
-		
-		.navbar-left > li > a {
-			margin-top: 50px;
-			margin-bottom: 50px;
-			font-weight: bold;
-		}
-
-		.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus   {
-			color: #bbd153;
-			background-color: rgba(76,78,73,0);;
-		}
-
-		#navbar-login{
-			line-height: 150px;
-			height: 150px;
-			padding-top: 0px;
-		}
-		.navbar-text{
-			margin-top: 65px;
-			margin-bottom: 65px;
-		}
-		#login-dp{
-			min-width: 250px;
-			padding: 14px 14px 0;
-			overflow:hidden;
-			background-color: rgba(76,78,73,.9);
-		}
-		#login-dp .help-block{
-			font-size: 12px;
-		}
-		#login-dp .form-group {
-			margin-bottom: 10px;
-		}
-		/* light green */
-		.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > li > a:hover, #login-dp .help-block > a:hover, #login-dp .checkbox > label:hover{
-			color: #bbd153;
-		}
-		/* dark green */
-		.navbar-inverse .navbar-nav > li > p, .navbar-inverse .navbar-nav > li > a,  #login-dp .help-block > a, #login-dp .checkbox > label{
-			color: #70962c;
-		}
-		/* dark gray */
-		.navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover{
-			background-color: #4C4E49;
-		}
-		/* sign in button */
-		#login-nav .btn-primary{
-			background-color: #bbd153;
-			border-color: #70962c;
-			color: #4C4E49;
-		}
-		#login-nav .btn-primary:hover{
-			background-color: #96B440;
-		}
-		/* icon bar */
-		.navbar-inverse .navbar-toggle .icon-bar{
-			background-color: #bbd153;
-		}
-		@media(max-width:768px){
-			.navbar-text{
-				padding-left: 15px;
-				padding-right: 15px;
-				margin-top: 15px;
-				margin-bottom: 15px;
-			}
-			#navbar-login{
-				line-height: 50px;
-				height: 50px;
-			}
-
-			.navbar-left > li > a {
-				margin: 0;
-				padding: 15;
-			}
-
-			#navbar-with-divider { 
-				border-bottom-width: 1px;
-				border-bottom-style: solid;
-			}
-
-			#login-dp{
-				background-color: inherit;
-			}
-		}
-		/*-------------------navbar end-------------------*/
 		#content {
 			padding-bottom: 150px;
 		}
@@ -189,6 +84,9 @@
 			}
 
 		}
+
+
+
 		/* ---------------------- footer end ---------------------- */
 	</style>
 
@@ -244,7 +142,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="{% url 'basics:login' %}">	
+						<a class="navbar-brand" href="{% url 'basics:login' %}">
 							<img id="brand-image" src={% static 'basics/images/AoGLogo.png'%} alt="Act of Goods"/>
 						</a>
 					</div>
@@ -319,7 +217,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="{% static 'basics/js/bootstrap.min.js' %}"></script>
-	
+
 	</body>
 
 </html>
