--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -109,7 +109,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="{% url 'basics:login' %}">			<!-- TODO change url to index -->
+						<a class="navbar-brand" href="{% url 'basics:actofgoods_startpage' %}">			<!-- TODO change url to index -->
 							<img id="brand-image" src={% static 'basics/images/AoGLogo.png'%} alt="Act of Goods"/>
 						</a>
 					</div>
@@ -117,7 +117,7 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="navbar-collapse">
 						<ul class="nav navbar-nav navbar-left">
-							<li {% if "/chat/" not in request.path and "/profil/" not in request.path and "/aboutus/" not in request.path and "/privacy/" not in request.path %} class="active" {% endif %}><a href="{% url 'basics:login' %}">Home</a></li>			<!-- TODO change url to index and update if-->
+							<li {% if "/chat/" not in request.path and "/profil/" not in request.path and "/aboutus/" not in request.path and "/privacy/" not in request.path %} class="active" {% endif %}><a href="{% url 'basics:actofgoods_startpage' %}">Home</a></li>			<!-- TODO change url to index and update if-->
 							<li><a href="#">Needs</a></li>					<!-- insert URL for needs and create if for class = active-->
 							<li><a href="#">Information</a></li>				<!-- insert URL for information and create if for class = active-->
 							<li id="navbar-with-divider" {% if "/profil/" not in request.path and "/aboutus/" not in request.path and "/privacy/" not in request.path %} class="active" {% endif %}><a href="{% url 'basics:chat' %}">Messages</a></li>				<!-- update if-->
