Changes to event cards in home.html

--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -109,7 +109,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="{% url 'basics:actofgoods_startpage' %}">			<!-- TODO change url to index -->
+						<a class="navbar-brand" href="{% url 'basics:actofgoods_startpage' %}">
 							<img id="brand-image" src={% static 'basics/images/AoGLogo.png'%} alt="Act of Goods"/>
 						</a>
 					</div>
