--- a/basics/templates/basics/home.html
+++ b/basics/templates/basics/home.html
@@ -66,20 +66,15 @@
  						 <h2 class="title">Beispielüberschrift</h2>
  						 <p class="desc">Irgend eine Beschreibung</p>
         	<ul>
- 							 <li style="width:50%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span> Distance</a></li>
- 							 <li style="width:50%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
+ 							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span> Distance</a></li>
+               <li style="width:20%;"> <span class="glyphicon glyphicon-heart"></span> Help</li>
+               <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
  						 </ul>
  					 </div>
 
  				 </li>
 
  				 <li>
- 					 <time datetime="2014-07-20 0000">
- 						 <span class="day">8</span>
- 						 <span class="month">Jul</span>
- 						 <span class="year">2014</span>
- 						 <span class="time">12:00 AM</span>
- 					 </time>
  					 <div class="info">
  						 <h2 class="title">One Piece Unlimited World Red</h2>
  						 <p class="desc">PS Vita</p>
