make hover on footer transparent

--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -71,7 +71,7 @@
 
 		.nav-pills > li > a:hover, .nav-pills > li > a:focus{
 			color: #bbd153;
-			background-color: #4C4E49;
+			background-color: rgba(76,78,73,0);/*#4C4E49;*/
 		}
 
 		@media(max-width:768px){
