--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -116,9 +116,24 @@
 					<div class="collapse navbar-collapse" id="navbar-collapse">
 						<ul class="nav navbar-nav navbar-left">
 							<li {% if "/home/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:home' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
-							<li><a href="#"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> Needs</a></li>					<!-- insert URL for needs and create if for class = active-->
-							<li><a href="#"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Information</a></li>				<!-- insert URL for information and create if for class = active-->
-							<li id="navbar-with-divider" {% if "/chat/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:chat' %}"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Messages</a></li>
+
+							<li {% if "/needs" in request.path %} class="dropdown active" {% else %} class="dropdown" {% endif %}>
+								<a id="navbar-dropdown" href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> Needs <span class="caret"></span></a>
+								<ul id="navbar-dropdown-menu" class="dropdown-menu">
+									<li><a href="{% url 'basics:needs_all' %}">All</a></li>
+									<li><a href="{% url 'basics:needs_new' %}">New</a></li>
+									<li><a href="{% url 'basics:needs_timeline' %}">Timeline</a></li>
+								</ul>
+							</li>					<!-- insert URL for needs and create if for class = active-->
+							<li {% if "/information" in request.path %} class="dropdown active" {% else %} class="dropdown" {% endif %}>
+								<a id="navbar-dropdown" href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Information <span class="caret"></span></a>
+								<ul id="navbar-dropdown-menu" class="dropdown-menu">
+									<li><a href="{% url 'basics:information_all' %}">All</a></li>
+									<li><a href="{% url 'basics:information_new' %}">New</a></li>
+									<li><a href="{% url 'basics:information_timeline' %}">Timeline</a></li>
+								</ul>
+							</li>					<!-- insert URL for needs and create if for class = active-->
+							<li id="navbar-with-divider" {% if "/chat/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:chat' %}"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Chats</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
 							<li {% if "/help/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:help'%}"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span> Help</a></li>
