--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -10,7 +10,7 @@
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="{% static 'basics/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'basics/css/event-list.css' %}">
-    <link rel="stylesheet" href="{% static 'basics/css/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'basics/css/navbar_footer.css' %}">
 	<style>
 		* {
 	    		margin: 0;
@@ -46,46 +46,7 @@
 			width: 34%;
 			float: left;
 		}
-		/* ---------------------- footer start ---------------------- */
-		#footer {
-			background-color: rgba(76,78,73,.9);
-			height: 150px;
-			margin-top: 20px;
-			width:100%;
-			bottom: 0;
-			position: absolute;
-			border-top-width: 1px;
-			border-top-style: solid;
-			border-top-color: rgba(0, 0, 0, 0.15);
-			box-shadow: 0 -8px 12px rgba(0,0,0,.175);
 
-		}
-
-		.nav-pills > li > a {
-			margin-top: 55px;
-			margin-bottom: 55px;
-			margin-left: 15px;
-			margin-right: 15px;
-			color: #70962c;
-		}
-
-		.nav-pills > li > a:hover, .nav-pills > li > a:focus{
-			color: #bbd153;
-			background-color: rgba(76,78,73,0);
-		}
-
-		@media(max-width:768px){
-
-			.nav-pills > li > a {
-				padding-top: 15px;
-				padding-bottom: 15px;
-				margin-top: 0px;
-				margin-bottom: 0px;
-			}
-
-		}
-
-		/* ---------------------- footer end ---------------------- */
 	</style>
 
 
