create immediate aid button and add immediate_aid.html

--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -39,6 +39,18 @@
     </div>
     <div id="description-counter">
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+
+	<!-- immediate aid button -->
+	<div class="container">
+		<div class="row">
+        		<div class="col-md-12">
+				<a class="btn btn-default immediate-aid-button" type="button" href="{% url 'basics:immediate_aid' %}">
+					<div>Immediate<br />Aid</div>
+				</a>
+        		</div>   
+		</div>
+	</div>
+
     </div>
 </div>
 {% endblock %}
