--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -47,6 +47,33 @@
 			float: left;
 		}
 
+	/* -------------------------- immediate help button start -------------------------- */
+
+	.immediate-aid-button {
+		box-shadow: 0 4px 12px rgba(0,0,0,.175);
+		border: 3px solid #D36E5A;
+		font-size: 26px;
+		line-height: 26px;
+		color: #bbd153;
+		background-color: #C7483A;
+		margin: auto;
+		border-radius: 50%;
+		height: 150px;
+		width: 150px;
+		position: relative;
+		padding: 49px 6px;
+	}
+
+	.immediate-aid-button:hover, .immediate-aid-button:focus, .immediate-aid-button:active {
+		color:  #bbd153;
+		background-color: #C43B31;
+		text-decoration: none;
+		border-color: #D36E5A;
+	}
+
+	/* -------------------------- immediate help button end -------------------------- */
+
+
 	</style>
 
 
