--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -64,7 +64,7 @@
 		padding: 49px 6px;
 	}
 
-	.immediate-aid-button:hover, .immediate-aid-button:focus, .immediate-aid-button:active {
+	.btn-default.immediate-aid-button:hover, .btn-default.immediate-aid-button:focus, .btn-default.immediate-aid-button:active {
 		color:  #bbd153;
 		background-color: #C43B31;
 		text-decoration: none;
@@ -154,7 +154,7 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="navbar-collapse">
 						<ul class="nav navbar-nav navbar-left">
-							<li {% if "/aboutus/" not in request.path and "/privacy/" not in request.path %} class="active" {% endif %}><a href="{% url 'basics:login' %}">Home</a></li>
+							<li {% if "/aboutus/" not in request.path and "/privacy/" not in request.path and "/immediate_aid/" not in request.path %} class="active" {% endif %}><a href="{% url 'basics:login' %}">Home</a></li>
 							<li id="navbar-with-divider" {% if "/aboutus/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:aboutus'%}"><span class="glyphicons glyphicons-group" aria-hidden="true"></span> About Us</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
