--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -32,7 +32,45 @@
 			margin-bottom: 170px;
 		}
 
-		#description-counter{
+		/* -------------------------- heading and description start -------------------------- */
+
+		#act-of-goods-heading{
+			color: #bbd153;
+			font-size: 84px;
+			font-weight: bold;
+		}
+
+		/* -------------------------- heading and description end -------------------------- */
+
+		/* -------------------------- counter start -------------------------- */
+
+		#counter-container {
+			padding: 20px 20px 30px 20px;
+			display: table;
+			margin-left: auto;
+            margin-right: auto;
+		}
+
+		#counter-inner {
+			display: table-cell;
+		}
+
+		#counter {
+			color:  #D36E5A;
+			font-weight: bold;
+			padding: 15px 20px;
+			background-color: rgba(76,78,73,.05);
+			border-width: 1px;
+			border-style: solid;
+			border-color: rgba(0, 0, 0, 0.15);
+			border-radius: 8px;
+			box-shadow: inset 0px 0px 20px 0px rgba(0,0,0,.1);
+		}		
+
+		/* -------------------------- counter end -------------------------- */
+
+
+		#description-counter-immediate-aid{
 			width: 60%;
 			float: right;
       margin: 30px auto;
@@ -49,6 +87,17 @@
 
 	/* -------------------------- immediate help button start -------------------------- */
 
+		#immediate-aid-container {
+			margin-top: 40px;
+			display: table;
+			margin-left: auto;
+            margin-right: auto;
+		}
+
+		#immediate-aid-inner {
+			display: table-cell;
+		}
+
 	.immediate-aid-button {
 		box-shadow: 0 4px 12px rgba(0,0,0,.175);
 		border: 3px solid #D36E5A;
@@ -62,6 +111,7 @@
 		width: 150px;
 		position: relative;
 		padding: 49px 6px;
+		font-weight: bold;
 	}
 
 	.btn-default.immediate-aid-button:hover, .btn-default.immediate-aid-button:focus, .btn-default.immediate-aid-button:active {
