--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -49,7 +49,7 @@
 		<div id="counter-container">
 			<div id="counter-inner">			
 			<span id="counter">
-				1000230012
+				1000230012	<!-- TODO hier noch die richtige anzahl einfuegen -->
 			</span>
 			</div>
 		</div>
